fix: align about title and logo

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,13 @@
 @font-face {
-  font-family: 'Raleway';
-  src: url('../fonts/Raleway-Regular.woff2') format('woff2');
+  font-family: "Raleway";
+  src: url("../fonts/Raleway-Regular.woff2") format("woff2");
   font-weight: 400;
   font-display: swap;
 }
 
 @font-face {
-  font-family: 'Raleway';
-  src: url('../fonts/Raleway-Bold.woff2') format('woff2');
+  font-family: "Raleway";
+  src: url("../fonts/Raleway-Bold.woff2") format("woff2");
   font-weight: 700;
   font-display: swap;
 }
@@ -16,11 +16,11 @@ body {
   margin: 0;
   background-color: #ffffff;
   color: #000000;
-  font-family: 'Raleway';
+  font-family: "Raleway";
 }
 
 .page {
-  max-width: 1100px;
+  width: 1100px;
   margin: 0 auto;
 }
 
@@ -137,14 +137,14 @@ body {
   color: #ffffff;
   cursor: pointer;
   text-transform: uppercase;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 22px;
   width: 256px;
   height: 51px;
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0; 
+  padding: 0;
 }
 
 .aligned-text {
@@ -180,7 +180,7 @@ body {
 .lots__heading {
   margin: 0;
   padding: 40px 0 40px 40px;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 40px;
   text-transform: uppercase;
@@ -220,9 +220,9 @@ body {
   position: relative;
   z-index: 2;
   color: #fff;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-size: 22px;
-  font-weight: 700; 
+  font-weight: 700;
   text-transform: uppercase;
   line-height: 1.2;
   text-decoration: underline;
@@ -234,9 +234,9 @@ body {
   position: relative;
   z-index: 2;
   color: #fff;
-  font-family: 'Raleway', sans-serif;
-  font-size: 20px; 
-  font-weight: 400; 
+  font-family: "Raleway", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
   line-height: 1.1;
 }
 
@@ -256,14 +256,14 @@ body {
   display: grid;
   grid-template-columns: 240px 1fr;
   column-gap: 72px;
-  padding: 155px 50px 180px; 
+  padding: 155px 50px 180px;
   align-items: start;
 }
 
 .about__column:first-child {
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .about__column:last-child {
@@ -287,7 +287,7 @@ body {
 }
 
 .about__title {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   font-weight: 700;
   font-size: 40px;
   text-transform: uppercase;
@@ -369,7 +369,7 @@ body {
   padding: 0;
   margin: 0;
   justify-self: flex-end;
-  align-items: center; 
+  align-items: center;
 }
 
 .footer__social-icon {
